# docs/swagger.json
@@ -6,6 +6,28 @@
         "version": "0.0.1"
     },
     "paths": {
+        "/v1/auth/check": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Check user data",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/auth.CheckResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/auth/signin": {
             "put": {
                 "consumes": [
@@ -18,6 +40,36 @@
                     "Auth"
                 ],
                 "summary": "Sign in",
+                "parameters": [
+                    {
+                        "description": "user credentials",
+                        "name": "Credentials",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.SignInBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/v1/auth/signout": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Sign out",
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -44,7 +96,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth.CreateUserBody"
+                            "$ref": "#/definitions/auth.SignUpBody"
                         }
                     }
                 ],
@@ -57,7 +109,18 @@
         }
     },
     "definitions": {
-        "auth.CreateUserBody": {
+        "auth.CheckResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "auth.SignInBody": {
             "type": "object",
             "required": [
                 "email",
@@ -65,11 +128,31 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 320
                 },
                 "password": {
                     "type": "string",
-                    "minLength": 20
+                    "maxLength": 128,
+                    "minLength": 8
+                }
+            }
+        },
+        "auth.SignUpBody": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "maxLength": 320
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 128,
+                    "minLength": 8
                 }
             }
         }
